<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        style="@style/ToolBarStyle"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/fields_side_margin"
        android:layout_marginRight="@dimen/fields_side_margin"
        android:layout_marginTop="@dimen/field_top_margin"
        android:layout_marginBottom="@dimen/field_top_margin">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:id="@+id/imgProfile"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/field_top_margin"
            android:textColor="@color/colorCarade" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvEmail"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sign_text_each_top_margin" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/field_top_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:id="@+id/textView3"
                style="@style/TextViewLabel" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/business" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_field_left_margin">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etName"
                        android:hint="@string/full_name" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etBirthDate"
                        android:hint="@string/birth_date"
                        android:editable="false"
                        android:focusable="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/field_top_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security"
                android:id="@+id/textView4"
                style="@style/TextViewLabel" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/imageView4"
                    android:src="@drawable/pad_number" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_field_left_margin">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etOldPassword"
                        android:hint="@string/old_pass"
                        android:password="true" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etNewPassword"
                        android:hint="@string/new_pass"
                        android:password="true" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etConfirmPassword"
                        android:hint="@string/confirm_pass"
                        android:layout_gravity="center_horizontal"
                        android:password="true" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:text="@string/update"
            android:id="@+id/btnUpdate"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            style="@style/AuthButton"
            android:layout_marginBottom="@dimen/field_top_margin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/field_top_margin" />
    </LinearLayout>

</LinearLayout>