<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kanoonth.ticketprovider.ui.views.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="5"
        android:background="@drawable/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/logo_top_margin"
                    style="@style/TextViewHeader"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/fields_side_margin"
            android:layout_marginRight="@dimen/fields_side_margin"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center" >

                <ImageView
                    android:layout_width="@dimen/image_icon_size"
                    android:layout_height="@dimen/image_icon_size"
                    android:src="@drawable/mail" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailEditText"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/input_field_left_margin"
                    android:hint="@string/hint_email" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/field_top_margin" >

                <ImageView
                    android:layout_width="@dimen/image_icon_size"
                    android:layout_height="@dimen/image_icon_size"
                    android:src="@drawable/tag" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameEditText"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/input_field_left_margin"
                    android:hint="@string/hint_name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/field_top_margin" >

                <ImageView
                    android:layout_width="@dimen/image_icon_size"
                    android:layout_height="@dimen/image_icon_size"
                    android:src="@drawable/password" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordEditText"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/input_field_left_margin"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/field_top_margin" >

                <ImageView
                    android:layout_width="@dimen/image_icon_size"
                    android:layout_height="@dimen/image_icon_size"
                    android:src="@drawable/password" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordConfirmationEditText"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/input_field_left_margin"
                    android:hint="@string/hint_confirmation_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                style="@style/AuthButton"
                android:text="@string/register"
                android:id="@+id/signupButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_top_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:id="@+id/tvHaveAccount"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:textSize="@dimen/authTextSize" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>